[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration_package"
version = "1.0.0"
maintainers = [
  { name="Mark Holcroft", email="m.holcroft@lancaster.ac.uk" },
]
authors = [
  { name="Mark Holcroft", email="m.holcroft@lancaster.ac.uk"},
]
description = "A package that allows the user to implement the value iteration algorithm to find approximately optimal solutions to Markov Decision Processes (MDPs)."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["MDP", "Value Iteration", "Reinforcement Learning", "Grid World", "Optimisation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21"
]

[tool.setuptools]
packages = ["Value_Iteration"]

[project.urls]
Homepage = "https://github.com/holcrofm9664/value_iteration_package"
Documentation = "https://github.com/holcrofm9664/value_iteration_package#readme"

